--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "mongoose": "*",
     "mongoskin": "~1.4.1",
     "monk": "^6.0.5",
-    "morgan": "~1.6.1",
+    "morgan": ">=1.9.1",
     "scribe-js": "*",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
