--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "dateformat": "*",
-    "debug": "~2.2.0",
+    "debug": ">=2.6.9",
     "jade": "~1.11.0",
     "serve-favicon": "~2.3.0",
     "markdown": "*",
